вынес обнуляющие стили в отдельный файл

--- a/#src/_header.html
+++ b/#src/_header.html
@@ -1,4 +1,5 @@
-<heder class="heder">
-	<!--<h1>Шапка сайта</h1>-->
+<heder class="header">
+	<div class="header__content _container">
 
+	</div>
 </heder>
