--- a/#src/index.html
+++ b/#src/index.html
@@ -10,7 +10,22 @@
 
 <body>
 	@@include('_header.html')
-	<main class="main">
+	<main class="page">
+		<div class="hello">
+			<div class="hello__container _container">
+				<div class="hello__content">
+					<h1 class="hello__title title">
+						Hi, I am Dmitry,<br>Creative Technologist
+					</h1>
+					<div class="hello__text text">
+						Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis
+						enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+					</div>
+					<a href="" class="hello__btn btn">Download Resume</a>
+				</div>
+				<img src="img/myavatar.jpg" alt="#" class="hello__avatar">
+			</div>
+		</div>
 
 
 	</main>
