--- a/#src/index.html
+++ b/#src/index.html
@@ -11,7 +11,7 @@
 <body>
 	@@include('_header.html')
 	<main class="page">
-		<div class="hello">
+		<section class="hello">
 			<div class="hello__container _container">
 				<div class="hello__content">
 					<h1 class="hello__title title">
@@ -25,7 +25,35 @@
 				</div>
 				<img src="img/myavatar.jpg" alt="#" class="hello__avatar">
 			</div>
-		</div>
+		</section>
+		<section class="recent-posts">
+			<div class="recent-posts__container _container">
+				<div class="recent-posts__header">
+					<div class="recent-posts__title title-post">Recent posts</div>
+					<a href="" class="recent-posts__view-all">View all</a>
+				</div>
+				<div class="recent-posts__items">
+					<div class="recent-posts__column">
+						<article class="recent-posts__item recent-post">
+							<a class="recent-post__title">Making a design system from scratch</a>
+							<div class="recent-post__info">12 Feb 2020 <span>|</span> Design, Pattern</div>
+							<div class="recent-post__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+								amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt
+								nostrud amet. </div>
+						</article>
+					</div>
+					<div class="recent-posts__column">
+						<article class="recent-posts__item recent-post">
+							<a class="recent-post__title">Creating pixel perfect icons in Figma</a>
+							<div class="recent-post__info">12 Feb 2020 <span>|</span> Figma, Icon Design</div>
+							<div class="recent-post__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+								amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt
+								nostrud amet.</div>
+						</article>
+					</div>
+				</div>
+			</div>
+		</section>
 
 
 	</main>
