Главная страница готова!

--- a/#src/index.html
+++ b/#src/index.html
@@ -57,7 +57,7 @@
 		<section class="featured-works">
 			<div class='featured-works__container _container'>
 				<div class="featured-works__title title-post">Featured works</div>
-				<div class="works">
+				<div class="featured-works__items works">
 					<article class="works__item">
 						<a href="#" class="works__image _ibg">
 							<img src="img/works/1.jpg" alt="Work #1">
@@ -106,9 +106,18 @@
 				</div>
 			</div>
 		</section>
-
-
 	</main>
+	<footer class="footer">
+		<div class='footer__content _container'>
+			<div class="footer__social social">
+				<a href="#" class="social__item _icon-fb"></a>
+				<a href="#" class="social__item _icon-insta"></a>
+				<a href="#" class="social__item _icon-twitter"></a>
+				<a href="#" class="social__item _icon-linkedin"></a>
+			</div>
+			<div class="footer__copy">Copyright ©2020 All rights reserved </div>
+		</div>
+	</footer>
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
 	<script src='js/script.js'></script>
 </body>
