--- a/#src/index.html
+++ b/#src/index.html
@@ -69,16 +69,14 @@
 								<img src="img/works/1.jpg" alt="Work #1">
 							</a>
 							<div class="works__body">
-								<div class="works__title">Designing Dashboards</div>
+								<a href="#" class="works__title">Designing Dashboards</a>
 								<div class="works__info">
 									<div class="works__year">2020</div>
 									<div class="works__category">Dashboard</div>
 								</div>
 								<div class="works__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-									amet
-									sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt
-									nostrud
-									amet.</div>
+									amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt
+									nostrud amet.</div>
 							</div>
 						</article>
 						<article class="works__item">
@@ -86,7 +84,7 @@
 								<img src="img/works/2.jpg" alt="Work #1">
 							</a>
 							<div class="works__body">
-								<div class="works__title">Vibrant Portraits of 2020</div>
+								<a href="#" class="works__title">Vibrant Portraits of 2020</a>
 								<div class="works__info">
 									<div class="works__year">2018</div>
 									<div class="works__category">Illustration</div>
@@ -103,7 +101,7 @@
 								<img src="img/works/3.jpg" alt="Work #1">
 							</a>
 							<div class="works__body">
-								<div class="works__title">36 Days of Malayalam type</div>
+								<a href="#" class="works__title">36 Days of Malayalam type</a>
 								<div class="works__info">
 									<div class="works__year">2018</div>
 									<div class="works__category">Typography</div>
